# misfire

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
Formula/: misfire.rb
commands/: misfire.md
docs/: README.md  adapters.md  architecture.md  convertibility-taxonomy.md  framing.md  proof.md  usage.md
proof/: README.md  expected_audit.json  expected_convert.json  expected_rank.json
proof/castdb-sample/: expected_castdb_rank.json  seed.sql
proof/castdb-sample/config/: CLAUDE.md
proof/evidence-sample/config/: CLAUDE.md
proof/evidence-sample/projects/proj-sample/: sess-evidence-0001.jsonl
proof/sample-config/: CLAUDE.md
proof/sample-config/rules/: tools.md  verbose.md
src/misfire/: __init__.py  ablate.py  audit.py  classify.py  cli.py  evidence.py  match.py  parse.py  rank.py  scaffold.py
src/misfire/adapters/: __init__.py  cast_db.py  transcript.py
tests/: test_ablate.py  test_audit.py  test_cast_db.py  test_classify.py  test_cli.py  test_cli_castdb.py  test_cli_convert.py  test_match.py  test_parse.py  test_proof.py  test_proof_castdb.py  test_proof_convert.py  test_proof_rank.py  test_rank.py  test_scaffold.py  test_transcript_adapter.py
tests/bats/: ablate_skips_without_ollama.bats  convert_blocks_commit.bats
tests/fixtures/basic/config_root/: CLAUDE.md
tests/fixtures/basic/config_root/rules/: aaa.md  scoped.md
tests/fixtures/basic/project/: CLAUDE.local.md  CLAUDE.md
tests/fixtures/basic/project/.claude/: CLAUDE.md
tests/fixtures/basic/project/.claude/rules/: proj_rules.md
tests/fixtures/imports/: fence_test.md  imported.md  importer.md  real_import.md
tests/fixtures/transcripts/proj-alpha/: session-aaaa.jsonl
tests/fixtures/transcripts/proj-alpha/session-aaaa/subagents/: agent-bbbb.jsonl
